infrastructure/keycloak/overlays/dev/keycloak-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  rules:
  - host: keycloak.dev.seamlessremit.com
